Remove background size cover from body background image to stop it from jumping when swiching content

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -5,7 +5,6 @@ body {
   flex-direction: column;
 
   background-image: url("../img/chalkboard.jpg");
-  background-size: cover;
   color: whitesmoke;
   font-family: "Chalktastic";
 }
